--- a/Gas_Store/nbproject/private/private.properties
+++ b/Gas_Store/nbproject/private/private.properties
@@ -1,7 +1,22 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.commons-logging-1.2.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\httpcore-4.4.9.jar
+file.reference.jakarta.activation-2.0.0.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\jakarta.activation-2.0.0.jar
+file.reference.jakarta.el-api-4.0.0.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\jakarta.el-api-4.0.0.jar
+file.reference.jakarta.servlet-api-5.0.0.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\jakarta.servlet-api-5.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.xml.bind-api-3.0.0.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\jakarta.xml.bind-api-3.0.0.jar
+file.reference.jaxb-api-2.1.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\lombok-1.18.24.jar
+file.reference.mssql-jdbc-12.4.2.jre11.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\mssql-jdbc-12.4.2.jre11.jar
+file.reference.sqljdbc42.jar=C:\\Users\\LENOVO\\Gas_Store-\\Gas_Store\\lib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+selected.browser=Chrome
+user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\build.properties
