--- a/GasStore/nbproject/project.properties
+++ b/GasStore/nbproject/project.properties
@@ -12,7 +12,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=index.jsp
+client.urlPart=
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -25,30 +25,31 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
-endorsed.classpath=
 excludes=
-file.reference.fluent-hc-4.5.5.jar=lib/fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=lib/httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=lib/httpcore-4.4.9.jar
-file.reference.jakarta.activation-2.0.0.jar=lib/jakarta.activation-2.0.0.jar
-file.reference.jakarta.el-api-4.0.0.jar=lib/jakarta.el-api-4.0.0.jar
-file.reference.jakarta.servlet-api-5.0.0.jar=lib/jakarta.servlet-api-5.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jakarta.xml.bind-api-3.0.0.jar=lib/jakarta.xml.bind-api-3.0.0.jar
-file.reference.jaxb-api-2.1.jar=lib/jaxb-api-2.1.jar
-file.reference.lombok-1.18.24.jar=lib/lombok-1.18.24.jar
-file.reference.sqljdbc42.jar=lib/sqljdbc42.jar
+file.reference.commons-logging-1.2.jar=../LIB/commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=../LIB/fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=../LIB/gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=../LIB/httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=../LIB/httpcore-4.4.9.jar
+file.reference.jakarta.activation-2.0.0.jar=../LIB/jakarta.activation-2.0.0.jar
+file.reference.jakarta.el-api-4.0.0.jar=../LIB/jakarta.el-api-4.0.0.jar
+file.reference.jakarta.servlet-api-5.0.0.jar=../LIB/jakarta.servlet-api-5.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../LIB/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../LIB/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.xml.bind-api-3.0.0.jar=../LIB/jakarta.xml.bind-api-3.0.0.jar
+file.reference.jaxb-api-2.1.jar=../LIB/jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=../LIB/lombok-1.18.24.jar
+file.reference.sqljdbc42.jar=../LIB/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
-j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.20.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.4-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform=10-web
+j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.7-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.fluent-hc-4.5.5.jar}:\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.httpclient-4.5.5.jar}:\
@@ -88,8 +89,9 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_17
+platform.active=default_platform
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
