Paging and Employee Management

--- a/GasStore/GasStore/nbproject/private/private.properties
+++ b/GasStore/GasStore/nbproject/private/private.properties
@@ -1,12 +1,12 @@
-deploy.ant.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\SWP391\\project\\Gas_Store-\\GasStore\\GasStore\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\SWP391\\project\\Gas_Store-\\GasStore\\GasStore\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=D:\\SWP391\\project\\Gas_Store-\\GasStore\\GasStore\\lib\\javax.mail.jar
-file.reference.sqljdbc4.jar=D:\\SWP391\\project\\Gas_Store-\\GasStore\\GasStore\\lib\\sqljdbc4.jar
-file.reference.sqljdbc42.jar=D:\\SWP391\\project\\Gas_Store-\\GasStore\\GasStore\\lib\\sqljdbc42.jar
+deploy.ant.properties.file=C:\\Users\\vip2021\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\vip2021\\OneDrive\\Desktop\\Gas_Store-\\lib (2)\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\vip2021\\OneDrive\\Desktop\\Gas_Store-\\lib (2)\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=C:\\Users\\vip2021\\OneDrive\\Desktop\\Gas_Store-\\lib (2)\\lib\\javax.mail.jar
+file.reference.sqljdbc4.jar=C:\\Users\\vip2021\\OneDrive\\Desktop\\Gas_Store-\\lib (2)\\lib\\sqljdbc4.jar
+file.reference.sqljdbc42.jar=C:\\Users\\vip2021\\OneDrive\\Desktop\\Gas_Store-\\lib (2)\\lib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\vip2021\\AppData\\Roaming\\NetBeans\\17\\build.properties
