--- a/GasStore/GasStore/nbproject/private/private.properties
+++ b/GasStore/GasStore/nbproject/private/private.properties
@@ -8,5 +8,5 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome.INTEGRATED
 user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
