--- a/GasStore/GasStore/nbproject/project.properties
+++ b/GasStore/GasStore/nbproject/project.properties
@@ -27,6 +27,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.2.jar=C:\\Users\\Admin\\Downloads\\Libaries\\Libaries\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=C:\\Users\\Admin\\Downloads\\Libaries\\Libaries\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\Admin\\Downloads\\Libaries\\Libaries\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=C:\\Users\\Admin\\Downloads\\Libaries\\Libaries\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=C:\\Users\\Admin\\Downloads\\Libaries\\Libaries\\httpcore-4.4.9.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Admin\\Downloads\\lib (2)\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\Admin\\Downloads\\lib (2)\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=C:\\Users\\Admin\\Downloads\\lib (2)\\lib\\javax.mail.jar
@@ -45,7 +50,12 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fluent-hc-4.5.5.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.httpclient-4.5.5.jar}:\
+    ${file.reference.httpcore-4.4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
