--- a/GasStore/GasStore/nbproject/project.properties
+++ b/GasStore/GasStore/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=D:\\Workspace\\FPT-Chuy\u00ean Ng\u00e0nh\\K\u00ec 5\\SWP391\\1\\2\\Gas_Store-\\lib (2)\\lib\\activation-1.1.1.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\Admin\\Downloads\\Libaries\\Libaries\\commons-logging-1.2.jar
 file.reference.fluent-hc-4.5.5.jar=C:\\Users\\Admin\\Downloads\\Libaries\\Libaries\\fluent-hc-4.5.5.jar
 file.reference.gson-2.8.2.jar=C:\\Users\\Admin\\Downloads\\Libaries\\Libaries\\gson-2.8.2.jar
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.fluent-hc-4.5.5.jar}:\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.httpclient-4.5.5.jar}:\
-    ${file.reference.httpcore-4.4.9.jar}
+    ${file.reference.httpcore-4.4.9.jar}:\
+    ${file.reference.activation-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
