--- a/GasStore/GasStore/nbproject/private/private.properties
+++ b/GasStore/GasStore/nbproject/private/private.properties
@@ -1,19 +1,19 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.activation-1.1.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\GasStore\\GasStore\\lib\\activation-1.1.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\javax.mail.jar
-file.reference.sqljdbc4.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\sqljdbc4.jar
-file.reference.sqljdbc42.jar=C:\\Users\\Admin\\Desktop\\Gas_Store-\\lib (2)\\lib\\sqljdbc42.jar
+deploy.ant.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.activation-1.1.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\activation-1.1.jar
+file.reference.commons-logging-1.2.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\javax.mail.jar
+file.reference.sqljdbc4.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\sqljdbc4.jar
+file.reference.sqljdbc42.jar=D:\\SWP391\\project9\\Gas_Store-\\GasStore\\GasStore\\lib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
