--- a/GasStore/GasStore/nbproject/private/private.properties
+++ b/GasStore/GasStore/nbproject/private/private.properties
@@ -14,6 +14,6 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Vu Anh\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
